<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.singlescreenapp.MainActivity">


    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/elk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/elk1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Taxidermy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/title"
                    android:textColor="#de000000"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/description"
                    android:textColor="#99000000"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="#12000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:clickable="true"
                    android:onClick="openAddress_onClick"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/address_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/round_place_black_48" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@+id/address_icon"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/address"
                        android:textColor="#99000000"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="makeCall_onClick"
                    android:layout_height="56dp">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/round_phone_black_48" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toRightOf="@+id/phone_icon"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/phone_number"
                        android:textColor="#99000000"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="sendEmail_onClick"
                    android:layout_height="56dp">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/round_email_black_48" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="19dp"
                        android:layout_toRightOf="@+id/email_icon"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/email_address"
                        android:textColor="#99000000"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="visitWebsite_onClick"
                    android:layout_height="56dp">

                    <ImageView
                        android:id="@+id/website_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/round_web_black_48" />

                    <TextView
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toRightOf="@+id/website_icon"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/website_address"
                        android:textColor="#99000000"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/hours_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/round_access_time_black_48" />

                    <TextView
                        android:id="@+id/hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@+id/hours_icon"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/hours"
                        android:textColor="#99000000"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>